classDiagram
    %% ============================================
    %% Sprint 4: History & Advanced Features (Complete System)
    %% Duration: TBD
    %% User Stories: #22, #23, #29, #30, #31, #32
    %% ============================================

    %% ============================================
    %% ENUMS
    %% ============================================
    
    class UserStatus {
        <<enumeration>>
        ACTIVE
        SUSPENDED
        DELETED
    }

    class ProfileStatus {
        <<enumeration>>
        ACTIVE
        SUSPENDED
        DEACTIVATED
    }

    class RequestStatus {
        <<enumeration>>
        ACTIVE
        MATCHED
        COMPLETED
        CANCELLED
    }

    class UrgencyLevel {
        <<enumeration>>
        LOW
        MEDIUM
        HIGH
    }

    class OfferStatus {
        <<enumeration>>
        PENDING
        ACCEPTED
        DECLINED
    }

    class MatchStatus {
        <<enumeration>>
        ACTIVE
        COMPLETED
        CANCELLED
    }

    class NotificationType {
        <<enumeration>>
        VOLUNTEER_OFFER
        OFFER_ACCEPTED
        OFFER_DECLINED
        MATCH_CONFIRMED
        MATCH_CANCELLED
        REQUEST_UPDATED
    }

    %% ============================================
    %% CORE AUTHENTICATION & AUTHORIZATION
    %% ============================================

    class UserAccount {
        -UUID id
        -String email
        -String password
        -String name
        -String phoneNumber
        -String address
        -Date dateOfBirth
        -UserStatus status
        -UUID userProfileId
        -DateTime createdAt
        -DateTime updatedAt
        -Integer age
        -String location
        -String accessibilityNeeds
        -String profilePhoto
        -String companyName
        -String companyRegistrationNumber
        -String industry
        -String contactPerson
        -String companyAddress
        -String companyLogo
        -String department
        -ProfileStatus profileStatus
        +isActive() Boolean
        +isSuspended() Boolean
        +isPIN() Boolean
        +isCSRRep() Boolean
        +isPlatformManager() Boolean
        +findById(id)$ UserAccount
        +findByEmail(email)$ UserAccount
        +findByProfileName(name)$ UserAccount[]
        +create(data)$ UserAccount
        +update(id, data)$ UserAccount
        +suspend(id)$ UserAccount
        +activate(id)$ UserAccount
    }

    class UserProfile {
        -UUID id
        -String name
        -String description
        -JSON permissions
        -Boolean isActive
        -DateTime createdAt
        -DateTime updatedAt
        +hasPermission(permission) Boolean
        +isActiveRole() Boolean
        +findByName(name)$ UserProfile
        +getAllProfiles()$ UserProfile[]
    }

    note for UserProfile "Only 4 static records exist:\nPIN, CSR_REP, USER_ADMIN, PLATFORM_MANAGER"
    note for UserAccount "Single Table Inheritance Pattern:\n- All role-specific fields in ONE class\n- Role determined by userProfile reference\n- PIN users use: age, location, accessibilityNeeds\n- CSR users use: companyName, companyRegistrationNumber, etc\n- Platform Managers use: department\n- Unused fields are NULL for each user"

    %% ============================================
    %% SERVICE MANAGEMENT
    %% ============================================

    class RequestCategory {
        -UUID id
        -String name
        -String description
        -String iconUrl
        -Boolean isActive
        -DateTime createdAt
        -DateTime updatedAt
        +isActive() Boolean
        +findById(id)$ RequestCategory
        +findAll()$ RequestCategory[]
        +create(data)$ RequestCategory
        +update(id, data)$ RequestCategory
    }

    class Request {
        -UUID id
        -UUID pinId
        -UUID categoryId
        -String title
        -String description
        -UrgencyLevel urgency
        -DateTime dateNeeded
        -String location
        -RequestStatus status
        -Integer viewCount
        -Integer shortlistCount
        -DateTime createdAt
        -DateTime updatedAt
        +isActive() Boolean
        +isMatched() Boolean
        +isCompleted() Boolean
        +isUrgent() Boolean
        +incrementViewCount() void
        +incrementShortlistCount() void
        +decrementShortlistCount() void
        +findById(id)$ Request
        +findByPIN(pinId)$ Request[]
        +search(query, filters)$ Request[]
        +create(data)$ Request
        +update(id, data)$ Request
        +delete(id)$ Boolean
    }

    %% ============================================
    %% MATCHING SYSTEM
    %% ============================================

    class Shortlist {
        -UUID id
        -UUID csrRepId
        -UUID requestId
        -DateTime createdAt
        +getAgeInDays() Integer
        +isRecent() Boolean
        +findById(id)$ Shortlist
        +create(data)$ Shortlist
        +delete(id)$ Boolean
    }

    class VolunteerOffer {
        -UUID id
        -UUID csrRepId
        -UUID requestId
        -String message
        -OfferStatus status
        -DateTime createdAt
        -DateTime updatedAt
        +isPending() Boolean
        +isAccepted() Boolean
        +isDeclined() Boolean
        +hasMessage() Boolean
        +getAgeInHours() Integer
        +findById(id)$ VolunteerOffer
        +create(data)$ VolunteerOffer
        +update(id, data)$ VolunteerOffer
        +accept(id)$ VolunteerOffer
        +decline(id)$ VolunteerOffer
    }

    class Match {
        -UUID id
        -UUID requestId
        -UUID csrRepId
        -UUID pinId
        -MatchStatus status
        -DateTime matchedAt
        -DateTime completedAt
        -String cancellationReason
        -DateTime updatedAt
        +isActive() Boolean
        +isCompleted() Boolean
        +isCancelled() Boolean
        +getDurationInDays() Integer
        +findById(id)$ Match
        +create(data)$ Match
        +complete(id)$ Match
        +cancel(id, reason)$ Match
    }

    %% ============================================
    %% NOTIFICATIONS (New in Sprint 4)
    %% ============================================

    class Notification {
        -UUID id
        -UUID userId
        -NotificationType type
        -String message
        -Boolean isRead
        -DateTime createdAt
        +markAsRead() void
        +isUnread() Boolean
        +findById(id)$ Notification
        +findByUserId(userId)$ Notification[]
        +create(data)$ Notification
        +markAllAsRead(userId)$ void
    }

    %% ============================================
    %% RELATIONSHIPS
    %% ============================================
    
    %% Core relationships
    UserProfile "1" --> "0..*" UserAccount : has role
    UserAccount --> UserStatus : has status
    UserAccount --> ProfileStatus : has profile status

    %% UserAccount Relationships (role-based)
    UserAccount "1" --> "0..*" Request : creates (PIN role)
    UserAccount "1" --> "0..*" Shortlist : saves (CSR role)
    UserAccount "1" --> "0..*" VolunteerOffer : makes (CSR role)
    UserAccount "1" *-- "0..*" Match : provides help (CSR)
    UserAccount "1" *-- "0..*" Match : receives help (PIN)

    %% Request Relationships
    RequestCategory "1" --> "0..*" Request : categorizes
    Request "1" --> "0..*" Shortlist : saved by
    Request "1" --> "0..*" VolunteerOffer : receives
    Request "1" --> "0..1" Match : matched with
    Request --> RequestStatus : has status
    Request --> UrgencyLevel : has urgency

    %% Match
    Match --> MatchStatus : has status

    %% Volunteer Offer
    VolunteerOffer --> OfferStatus : has status

    %% Notification
    UserAccount "1" --> "0..*" Notification : receives
    Notification --> NotificationType : has type
